Implements TCP socket connection to from client to server... HEAVY REFACTOR COMINGgit statusgit status!

--- a/guiApp/guiApp.csproj
+++ b/guiApp/guiApp.csproj
@@ -120,6 +120,8 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="DLLObject.cs" />
+    <Compile Include="HelperClasses\AsyncRequest.cs" />
+    <Compile Include="HelperClasses\StateObject.cs" />
     <Compile Include="HelperClasses\SocketManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
