Parsing JSON "Completed" Configured the List view
The List View now loads the data directly from the DLL objects instead of strings via C# binding.

Added the TextFormatter to allow us to add extra text to binded data blocks if needed.

--- a/guiApp/guiApp.csproj
+++ b/guiApp/guiApp.csproj
@@ -128,6 +128,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextFormatter.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
