Testing Listening Socket c#

--- a/guiApp/guiApp.csproj
+++ b/guiApp/guiApp.csproj
@@ -131,6 +131,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AsynchronousSocketListener.cs" />
     <Compile Include="SendingSocket.cs" />
     <Compile Include="TextFormatter.cs" />
   </ItemGroup>
