--- a/guiApp/guiApp.csproj
+++ b/guiApp/guiApp.csproj
@@ -128,18 +128,15 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="DLLObject.cs" />
-    <Compile Include="BufferBuilder.cs" />
-    <Compile Include="FuncFlat.cs" />
     <Compile Include="HelperClasses\AsyncRequest.cs" />
     <Compile Include="HelperClasses\StateObject.cs" />
     <Compile Include="HelperClasses\SocketManager.cs" />
     <Compile Include="JSONParser.cs" />
-    <Compile Include="Logger.cs" />
+    <Compile Include="GuiLogger.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AsynchronousSocketListener.cs" />
     <Compile Include="SendingSocket.cs" />
     <Compile Include="TextFormatter.cs" />
   </ItemGroup>
@@ -174,15 +171,6 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FlatSharp">
-      <Version>3.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="FlatSharp.Runtime">
-      <Version>3.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Google.Protobuf">
-      <Version>3.12.3</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.10</Version>
     </PackageReference>
