--- a/Testing/Test_Harness/Test_Harness.vcxproj
+++ b/Testing/Test_Harness/Test_Harness.vcxproj
@@ -75,7 +75,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\HttpConnector;..\WindowsHelpers;..\Logger;..\Sockets;..\HttpClient;..\dll_control;..\BlockingQ;$(IncludePath)</IncludePath>
+    <IncludePath>..\HttpConnector;..\HttpClient;..\dll_control;..\BlockingQ;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
